src/test/deca/syntax/valid/print/print-float-hex.deca
// Description:
//    Programme minimaliste affichant un nombre flottant en hexadécimal.
//
// Résultats:
//    0x1.0cccccp+2
//
// Historique:
//    créé le 09/01/2025

{
    printlnx(4.2);
}
