src/test/deca/syntax/invalid/nested-block.deca
// Description:
//    Programme avec des blocs imbriqués utilisant println.
//
// Résultats:
//    start
//    Medium
//    final
//
// Historique:
//    créé le 01/01/2025

{
    println("start");
    {
        println("Medium");
    }
    println("final");
}
